イベントトリガーで各コミットを登録し、表示出来るように
- データソースは仮でテストデータを用意
- 各コミットの番号のみ保持していることに注意
- ビルド待ち、ビルド中、ビルドエラーの各リストを表示するように

--- a/BuildMonitor/BuildMonitor.csproj
+++ b/BuildMonitor/BuildMonitor.csproj
@@ -74,7 +74,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\BuildResult.cs" />
+    <Compile Include="Models\RevisionList.cs" />
     <Compile Include="Models\ExampleModel.cs" />
+    <Compile Include="Models\Revision.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
